--- a/templates/base.html
+++ b/templates/base.html
@@ -37,7 +37,7 @@
     <div class="container" id="mainHeading">
       <br />
       <h1 style="text-align: center; font-weight: 600px">
-        APPred: Antiprotozoal Peptide Prediction
+        iIL13Pred: Improved prediction of IL-13 inducing peptides
       </h1>
       <br />
     </div>
