--- a/templates/predict.html
+++ b/templates/predict.html
@@ -42,106 +42,11 @@ Predict
     <div class="form-group">
       <input type="file" name="seqfile" class="form-control-file" id="seqfile" accept=".txt" />
     </div>
-    <hr>
 
-    <p><b>Select Negative Dataset: </b></p>
-    <div>
-      <div class="form-check form-check-inline">
-        <input class="form-check-input" type="radio" name="negdata" id="Antiviral" value="Antiviral" required />
-        <label class="form-check-label" for="Antiviral">
-          <h6>Antiviral</h6>
-        </label>
-      </div>
-      <div class="form-check form-check-inline">
-        <input class="form-check-input" type="radio" name="negdata" id="Antibacterial" value="Antibacterial" required />
-        <label class="form-check-label" for="Antibacterial">
-          <h6>Antibacterial</h6>
-        </label>
-      </div>
-      <div class="form-check form-check-inline">
-        <input class="form-check-input" type="radio" name="negdata" id="Antifungal" value="Antifungal" required />
-        <label class="form-check-label" for="Antifungal">
-          <h6>Antifungal</h6>
-        </label>
-      </div>
-
-      <div class="form-check form-check-inline">
-        <input class="form-check-input" type="radio" name="negdata" id="AMP" value="AMP" required />
-        <label class="form-check-label" for="AMP">
-          <h6>AMP</h6>
-        </label>
-      </div>
-      <div class="form-check form-check-inline">
-        <input class="form-check-input" type="radio" name="negdata" id="NON_AMP" value="NON_AMP" required checked />
-        <label class="form-check-label" for="NON_AMP">
-          <h6>Non-AMP
-          </h6>
-        </label>
-      </div>
-
-    </div>
-  
-    <hr>
-
-    <p><b>Feature Selection Method: </b></p>
-    <div>
-      <div class="form-check form-check-inline">
-        <input class="form-check-input" type="radio" name="featureSelection" id="SVC" value="SVC" required />
-        <label class="form-check-label" for="SVC">
-          <h6>SVC-L1</h6>
-        </label>
-      </div>
-      <div class="form-check form-check-inline">
-        <input class="form-check-input" type="radio" name="featureSelection" id="MRMR" value="MRMR" required checked />
-        <label class="form-check-label" for="MRMR">
-          <h6>mRMR</h6>
-        </label>
-      </div>
-    </div>
-
-    <hr>
- 
-    <p><b>Select Prediction Model: </b></p>
-    <div>
-      <div class="form-check">
-        <input class="form-check-input" type="radio" name="ModalSelection" value="DT" id="DT" required />
-        <label class="form-check-label" for="DT">
-          <h6>Decision Tree</h6>
-
-        </label>
-      </div>
-      <div class="form-check">
-        <input class="form-check-input" type="radio" name="ModalSelection" value="RF" id="RF" required />
-        <label class="form-check-label" for="RF">
-          <h6>Random Forest</h6>
-
-        </label>
-      </div>
-      <div class="form-check">
-        <input class="form-check-input" type="radio" name="ModalSelection" value="SVM" id="SVM" required />
-        <label class="form-check-label" for="SVM">
-          <h6>Support Vector Machine
-          </h6>
-        </label>
-      </div>
-      <div class="form-check">
-        <input class="form-check-input" type="radio" name="ModalSelection" value="Logistic_Regression"
-          id="Logistic_Regression" required />
-        <label class="form-check-label" for="Logistic_Regression">
-          <h6>Logistic Regression</h6>
-
-        </label>
-      </div>
-      <div class="form-check">
-        <input class="form-check-input" type="radio" name="ModalSelection" value="XgBoost" id="XgBoost" required
-          checked />
-        <label class="form-check-label" for="XgBoost">
-          <h6>XGBoost</h6>
-        </label>
-      </div>
-    </div>
     <p>
       <hr>
+      <h5>eXtreme Gradient Boosting Probability Threshold:
+      </h5>
       <b>Threshold</b> (Enter value between 0.1 to 1.0)<b> :</b>
 
       <input type="number" step="0.01" name="threshold" id="threshold" min="0.1" max="1" required/>
