--- a/templates/contact.html
+++ b/templates/contact.html
@@ -3,16 +3,16 @@
 <div class="container contactus">
   <div class="row">
     <div class="col-sm-6 first-column padd">
-      <h4>Dr. Vikas Sood</h4>
-      <div>UGC-Assistant Professor, Department of Biochemistry</div>
-      <div>Jamia Hamdard, New Delhi, 110062, India</div>
+      <h4>Dr. Pooja Arora</h4>
+      <div>Assistant Professor, Department of Zoology</div>
+      <div>Hansraj College (University of Delhi), Delhi, 110007, India</div>
       <div>
         <b>Email: </b
-        ><a class="email" href="mailto:v.sood@jamiahamdard.ac.in"
-          >v.sood@jamiahamdard.ac.in</a
+        ><a class="email" href="mailto:pooja@hrc.du.ac.in"
+          >pooja@hrc.du.ac.in</a
         >
       </div>
-      <div><b>Alternate Email: </b><a class="email" href="mailto:vikas1101@gmail.com">vikas1101@gmail.com</a> </div>
+      <div><b>Alternate Email: </b><a class="email" href="mailto:apooja1483@gmail.com">apooja1483@gmail.com</a> </div>
       <br /><br />
     </div>
 
