--- a/templates/index.html
+++ b/templates/index.html
@@ -23,24 +23,25 @@
   <div class="container" style="text-align: justify">
     <div class="row">
       <div class="col-sm-6 col-md-8">
-        <h4>Some of the features of APPred are as follows:</h4>
+        <h4>Some of the features of iIL13Pred are as follows:</h4>
         <ol>
           <li>
-            <b>Predict : </b>This module allows the user to predict whether the
-            given peptide(s) have antiprotozoal activity or not.
+            <b>Predict : </b>The user can use this module to predict whether the
+            given peptide can induce IL-13 or not.
           </li>
           <br />
           <li>
             <b>Design : </b>This module allows the user to generate all the
             possible single mutants of a given peptide and then predict whether
-            the mutants have antiprotozoal activity or not.
+            the mutants have antiprotozoal activity or not.This module generates
+            all the mutants of a given peptide. Then IL-13 induction ability of
+            these peptides is predicted.
           </li>
           <br />
           <li>
-            <b>Protein Scan : </b>This module allows the user to generate all
-            the possible overlapping peptides of a given protein sequence and
-            determine whether the generated peptides have antiprotozoal activity
-            or not.
+            <b>Protein Scan : </b>This module generates all the possible
+            overlapping peptides of a given protein sequence. These peptide
+            sequences are then predicted to induce IL-13.
           </li>
         </ol>
       </div>
