--- a/templates/design.html
+++ b/templates/design.html
@@ -12,7 +12,7 @@ Design
   <br />
   <div class="container" style="text-align: justify;">
     <h6><i>
-      This module generates all potential mutants of a given peptide. All the residues of a protein are mutated one at a time while keeping the remaining amino acids of the peptide constant. This module can be used to identify the mutants that might have the highest IL-13 induction ability.
+      This module generates all potential mutants of a given peptide. All the residues of a protein are mutated one at a time while keeping the remaining amino acids of the peptide constant. This module can be used to identify the mutants that might have the highest IL-13 induction ability. In case a peptide sequence is greater than 35 amino acids, then the probability of IL-13 induction will be calculated using the first 35 amino acids only.
       <br>
       For more help please visit <a style="text-decoration: none;" href="{{request.script_root}}/help">Help</a>
     </i></h6>
