--- a/templates/index.html
+++ b/templates/index.html
@@ -1,5 +1,5 @@
-{% extends "base.html" %} {% block title %} APPred {% endblock %} {% block main
-%}
+{% extends "base.html" %} {% block title %}iIL13Pred {% endblock %} {% block
+main %}
 <div class="container mainblock">
   <h1 class="heading-color" style="text-align: center">Welcome to iIL13Pred</h1>
   <hr />
@@ -7,14 +7,13 @@
   <div class="container" style="text-align: justify">
     <b
       ><i>
-        Interleukin (IL)-13 is known to be associated with a number of
-        infectious and non-infectious diseases. The fact that several anti-IL-13
-        drugs for the possible treatment of asthma and Atopic dermatitis are in
-        clinical trials points toward the importance of this cytokine. The
-        recent association of IL-13 with COVID-19 severity has sparked interest
-        in this cytokine. Therefore prediction and characterization of novel
-        molecules which can regulate IL-13 induction might lead to novel
-        therapeutics.
+        Interleukin (IL)-13 is a pleiotropic cytokine that is secreted by
+        T-Helper 2 cells, basophils, mast cells, eosinophils, and natural killer
+        cells. IL-13 is known to be associated with a number of infectious and
+        non-infectious diseases. Interestingly, the recent association of IL-13
+        with COVID-19 severity has sparked interest in this cytokine. Therefore
+        prediction and characterization of new molecules/peptides which can
+        regulate IL-13 induction might lead to novel therapeutics.
       </i>
     </b>
   </div>
@@ -23,18 +22,17 @@
   <div class="container" style="text-align: justify">
     <div class="row">
       <div class="col-sm-6 col-md-8">
-        <h4>Some of the features of iIL13Pred are as follows:</h4>
+        <h4>Major features of iIL13Pred are as follows:</h4>
         <ol>
           <li>
-            <b>Predict : </b>The user can use this module to predict whether the
-            given peptide can induce IL-13 or not.
+            <b>Predict : </b>The user can use this module to predict whether the given peptide sequence can induce IL-13 or not.
           </li>
           <br />
           <li>
             <b>Design : </b>This module allows the user to generate all the
             possible single mutants of a given peptide and then predict whether
-            the mutants have antiprotozoal activity or not.This module generates
-            all the mutants of a given peptide. Then IL-13 induction ability of
+            the mutants have IL-13 induction activity or not. This module generates
+            all the mutants of a given peptide sequence. Then IL-13 induction ability of
             these peptides is predicted.
           </li>
           <br />
