--- a/templates/predict.html
+++ b/templates/predict.html
@@ -11,7 +11,7 @@ Predict
   <hr>
   <br />
   <div class="container" style="text-align: justify;">
-    <h6><i>This module is designed to predict the probability of whether a given peptide could induce IL-13 or not. The users are prompted to input the peptide sequences ranging from 8-25 amino acids. In case a peptide sequence is greater than 35 amino acids, then the probability of IL-13 induction will be calculated using the first 35 amino acids only.  <br> For more help please visit <a style="text-decoration: none;"
+    <h6><i>This module is designed to predict the probability of whether a given peptide could induce IL-13 or not. The user is prompted to input the peptide sequence(s) ranging from 8-35 amino acids. In case a peptide sequence is greater than 35 amino acids, then the probability of IL-13 induction will be calculated using the first 35 amino acids only.  <br> For more help please visit <a style="text-decoration: none;"
           href="{{request.script_root}}/help">Help</a>
 
 
