--- a/templates/help.html
+++ b/templates/help.html
@@ -1,13 +1,10 @@
 {% extends "base.html" %} {% block title %} Help {% endblock %} {% block main %}
 <div class="container">
-  <h2 style="text-align: center;" class="heading-color">APPred Webserver</h2>
+  <h2 style="text-align: center;" class="heading-color">iIL13Pred Webserver</h2>
   <br>
   <div style="text-align: justify;" >
     <strong >
-      This webserver has been designed to assist scientists in the designing of
-      antiprotozoal peptides. <br />
-      This page helps the user on how different modules of this webserver works. This
-      server's key modules are as follows:
+      This tool helps the user to predict whether a given peptide can induce IL-13 or not.
     </strong>
     <br />
   </div>
@@ -20,10 +17,7 @@
   
   <div style="text-align: justify;" >
     <strong>
-      This module allows the users to predict antiprotozoal peptides from a set
-      of peptides or a peptide library (virtual screening). The server will
-      predict and rank peptides based on their potential for antiprotozoal
-      activity.
+      This module allows the users to predict whether a given peptide can induce IL-13 or not.
     </strong>
     <br /><br />
     <div>
@@ -41,10 +35,7 @@
   <h4 style="text-align: center" class="heading-color"> Design</h4>
   <div style="text-align: justify;">
     <strong>
-      This module generates mutants of a given peptide and predicts
-      antiprotozoal peptides among the mutants. This server helps users to find
-      the bare minimum number of mutations needed to boost the potency of query
-      peptide.
+      This module generates mutants of a given peptide and predicts their IL-13 inducing probability. This server helps users to find the minimum number of mutations needed to boost the IL-13 induction potential of query peptides.
     </strong>
     <br /><br />
     <div>
@@ -61,9 +52,7 @@
   <h4 style="text-align: center" class="heading-color">Protein Scan</h4>
   <div style="text-align: justify;">
     <strong>
-      This module generates overlapping peptides from the query protein sequence
-      and estimates their antiprotozoal activity. It helps the users to
-      determine which segments of a protein have antiprotozoal activity.
+      This module generates overlapping peptides from the query protein sequence and estimates their IL-13 induction activity. It helps the users to determine which segments of a protein have IL-13 induction ability.
     </strong>
     <br /><br />
     <div>
