--- a/templates/base.html
+++ b/templates/base.html
@@ -30,7 +30,7 @@
       type="image/x-icon"
       href="{{url_for('static', filename='assets/fonts/favicon.ico')}}"
     />
-    <link rel="stylesheet" href="{{url_for('static', filename='assets/css/footer-basic.css')}}">
+    <link rel="stylesheet" href="{{url_for('static', filename='assets/css/Footer-basic.css')}}">
   </head>
 
   <body>
